--- a/src/tileno/fileEditor/fileEditor.fxml
+++ b/src/tileno/fileEditor/fileEditor.fxml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tileno.fileEditor.Controller">
    <children>
       <TextArea fx:id="output" layoutX="14.0" layoutY="120.0" prefHeight="308.0" prefWidth="573.0" />
@@ -10,5 +14,7 @@
       <Label fx:id="prog_name" layoutX="282.0" layoutY="14.0" text="Label" />
       <Button fx:id="load" layoutX="193.0" layoutY="82.0" mnemonicParsing="false" onAction="#load" text="Load" />
       <Button fx:id="save" layoutX="16.0" layoutY="435.0" mnemonicParsing="false" onAction="#save" text="Save" />
+      <Button fx:id="new_file" layoutX="16.0" layoutY="9.0" mnemonicParsing="false" onAction="#createFile" text="New File" />
+      <Label fx:id="state" layoutX="282.0" layoutY="440.0" />
    </children>
 </AnchorPane>
